--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": [
-    [
-      "@babel/preset-env",
-      {
-        "modules": "commonjs"
-      }
-    ],
-    "@babel/preset-react"
-  ]
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
