--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@testing-library/react": "^12.1.2",
+    "@types/react": "^17.0.39",
     "babel-jest": "^27.4.6",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.4",
@@ -35,6 +36,8 @@
     "html-webpack-tags-plugin": "^3.0.2",
     "jest": "^27.4.7",
     "prettier": "^2.5.1",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.6.2",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
