--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "clean": "rm dist/bundle.js",
     "start:api": "json-server --watch ./json_server/cars.json",
     "start": "webpack serve --open",
-    "test": "jest"
+    "test": "jest",
+    "convert-ts": "node ./scripts/convert-ts.js"
   },
   "dependencies": {
     "json-server": "^0.17.0",
