--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
-    "typeRoots": ["/src/types"]
+    "typeRoots": ["/src/types"],
+    "allowSyntheticDefaultImports": true
   }
 }
