--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   app:
     build:
-      context: ../
+      context: .
       dockerfile: Dockerfile
       args:
         # Update 'VARIANT' to pick an LTS version of Node.js: 16, 14, 12.
