--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongodb": "^4.5.0",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
