--- a/package.json
+++ b/package.json
@@ -1,51 +1,33 @@
 {
-  "name": "mob-programming",
-  "browserslist": "> 0.5%, last 2 versions, not dead",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "name": "ac-front-end-interview",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "clean": "rm dist/bundle.js",
-    "start:api": "json-server --watch ./json_server/cars.json",
-    "start:frontend": "webpack serve --open",
-    "start": "concurrently npm:start:*",
-    "test": "jest",
-    "convert-ts": "node ./scripts/convert-ts.js"
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "concurrently": "^7.6.0",
-    "json-server": "^0.17.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@testing-library/react": "^13.4.0",
-    "@types/react": "^17.0.39",
-    "babel-jest": "^29.5.0",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.4",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "html-webpack-plugin": "^5.5.0",
-    "jest": "^29.5.0",
-    "prettier": "^2.5.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^5.0.3",
-    "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
+    "jest": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5"
   }
 }
